--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tplinkeshop",
+  "name": "mieshop",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,6 +32,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.4.1",
-    "swiper": "^5.3.1"
+    "swiper": "^5.3.1",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
